<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:background="@android:color/background_dark">

    <TableLayout
            android:id="@+id/tlSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAEAEA"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:stretchColumns="3">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:id="@+id/btn_restest"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/res_test"
            />

            <Button
                    android:id="@+id/btn_test"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/dex_test"
            />

            <Button
                    android:id="@+id/btn_sotest"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/so_test"
            />

        </TableRow>

        <TableRow
                android:id="@+id/tableRow1_1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:id="@+id/btn_clean_console"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/clear_notify"
            />

            <Button
                    android:id="@+id/btn_download"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/pull_patch"
            />

            <Button
                    android:id="@+id/btn_clean_patch"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/clear_patch"
            />
        </TableRow>

        <TableRow
                android:id="@+id/tableRow1_2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:id="@+id/btn_kill"
                    style="@style/button_allgrade_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/kill_app"
            />
        </TableRow>

    </TableLayout>

    <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/tlSetting"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:background="@drawable/aliyun_bg"
    />

</RelativeLayout>
